fix: add docs file
